[package]
name = "mitochondria"
version = "1.0.1"
authors = ["Anthony Ramine <n.oxyde@gmail.com>"]
description = "Mitochondria is the powerhouse of the `Cell`"
repository = "https://github.com/nox/mitochondria"
documentation = "https://docs.rs/mitochondria"
readme = "README.md"
keywords = ["cell"]
license = "ISC"
