[package]
name = "mitochondria"
version = "1.1.2"
authors = ["Anthony Ramine <n.oxyde@gmail.com>"]
description = "Mitochondria is the powerhouse of the `Cell`"
repository = "https://github.com/nox/mitochondria"
documentation = "https://docs.rs/mitochondria"
readme = "README.md"
keywords = ["cell"]
license = "ISC"

[features]
no_std = []
